# dicemix

./: .gitignore  Cargo.toml  build.rs
doc/: protocol.md
src/: field.rs  io.rs  lib.rs  messages.rs  peer.rs  rng.rs
src/dc/: fp.rs  mod.rs  xor.rs
src/solver/: mod.rs  solver_flint.rs
src/solver/benchmark/: Makefile  gen-benchmark-inputs.sh  gen-input.sage  run-benchmark.sh
src/solver/solver_flint/: ffi.rs  mod.rs  solver_flint.cpp  solver_flint.h
src/state/: history.rs  mod.rs  peer.rs
